059_put_together/grade.txt
Grading at 02/16/2018:17:48:17.534221
For commit ID 343c5fa18e360a46ba49acc98c3ec2d32a0ed526
Attempting to compile:
rm -f  outname.o  counts.o  main.o  kv.o count_values *~
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 outname.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 counts.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 main.c
main.c: In function ‘countFile’:
main.c:35:5: error: expected ‘;’ before ‘curr’
     curr = NULL;
     ^
Makefile:10: recipe for target 'main.o' failed
make: *** [main.o] Error 1
The code did not compile! Please try git add . to push all files in your working directory 

Overall Grade: F
